--- a/styles/sections/main/contacts.css
+++ b/styles/sections/main/contacts.css
@@ -27,3 +27,48 @@
     width: 100%;
     object-fit: cover;
 }
+
+@media (max-width: 1200px) {
+    .main__contacts .container{
+        padding: 0;
+        width: 100%;
+        max-width: 1200px;
+        height: 240px;
+    }
+    .main__contacts__media{
+        width: 50%;
+        height: 240px;
+    }
+    .main__contacts__media img{
+        height: 240px;
+    }
+    .main__contacts__description h3{
+        font-size: 20px;
+    }
+    .main__contacts__description p{
+        font-size: 16px;
+        line-height: 20px;
+    }
+}
+@media (max-width: 767px) {
+    .main__contacts__description h3{
+        text-align: center;
+    }
+    .main__contacts__description{
+        padding: 0;
+        width: 50%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+    }
+}
+@media (max-width: 476px) {
+    .main__contacts__description h3{
+        font-size: 18px;
+    }
+    .main__contacts__description p{
+        font-size: 12px;
+    }
+}
