--- a/styles/sections/main/services.css
+++ b/styles/sections/main/services.css
@@ -3,12 +3,12 @@
     //background-color: rgba(231,198,189,.15);
 }
 .main__services h1{
-    margin: 20px auto;
-    text-align: center;
+    margin: 20px auto 40px;
+    padding-left: 10px;
     letter-spacing: 1px;
-    font-size: 24px;
+    font-size: 40px;
     line-height: 20px;
-    //font-weight: 300;
+    width: 1140px;
 }
 .main__services .container{
     display: flex;
@@ -50,4 +50,70 @@
 }
 .main__services-item p{
 
+}
+
+@media (max-width: 1200px){
+    .main__services-item{
+        width: 230px;
+        height: 230px;
+        margin: 0 5px;
+    }
+    .main__services-item:hover{
+        width: 240px;
+        height: 230px;
+    }
+    .main__services h1{
+        width: 720px;
+        padding-left: 5px;
+    }
+}
+
+@media (max-width: 767px) {
+    .main__services{
+        padding: 0;
+    }
+    .main__services .container{
+        padding: 0;
+    }
+    .main__services h1{
+        font-size: 24px;
+        margin: 20px 0 15px;
+    }
+    .main__services-item{
+        width: 33.333%;
+        height: auto;
+        aspect-ratio: 1;
+        margin: 0;
+    }
+    .main__services__description{
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .main__services-item:hover{
+        width: auto;
+        height: auto;
+        margin: 0;
+    }
+}
+
+@media (max-width: 476px) {
+    .main__services .container{
+        flex-wrap: wrap;
+        padding: 0;
+    }
+    .main__services-item{
+        width: 100vw;
+        aspect-ratio: 1;
+        margin: 0;
+    }
+    .main__services__description{
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
 }
