--- a/styles/sections/main/about.css
+++ b/styles/sections/main/about.css
@@ -46,21 +46,30 @@
 }
 @media (max-width: 476px) {
     .main__about .container{
-        padding: 10px
+        padding: 0;
+        flex-wrap: wrap;
+        flex-direction: column-reverse;
     }
     .main__about__description{
-        width: 60%;
-        padding: 0 10px 0 0;
+        width: 100%;
+        padding: 10px 10px;
     }
     .main__about__description h1{
-        font-size: 24px;
+        font-size: 0;
         margin: 0;
+        text-align: center;
+    }
+    .main__about__description h2{
+        font-size: 24px;
+        margin: 0 0 5px;
         text-align: start;
     }
     .main__about__description p{
-        font-size: 12px;
+        font-size: 18px;
+        line-height: 20px;
+        letter-spacing: 1px;
     }
     .main__about__image{
-        width: 40%;
+        width: 100%;
     }
 }
