--- a/styles/sections/main/services.css
+++ b/styles/sections/main/services.css
@@ -78,6 +78,7 @@
     .main__services h1{
         font-size: 24px;
         margin: 20px 0 15px;
+        padding: 0 10px;
     }
     .main__services-item{
         width: 33.333%;
@@ -91,6 +92,9 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
+    }
+    .main__services__description h3{
+        text-align: center;
     }
     .main__services-item:hover{
         width: auto;
