--- a/styles/sections/services/services.css
+++ b/styles/sections/services/services.css
@@ -1,5 +1,6 @@
 .services{
     display: none;
+    //background-color: rgba(231,198,189,.15);
 }
 .services.opened{
     display: block;
@@ -50,7 +51,7 @@
         width: 50%;
     }
     .services__item p{
-        font-size: 14px;
+        font-size: 18px;
     }
     .services__item h3{
         font-size: 24px;
@@ -64,7 +65,7 @@
 }
 @media (max-width: 476px) {
     .services .container{
-        padding: 0 0 20px;
+        padding: 0;
     }
     .services__item{
         padding: 0;
@@ -78,13 +79,15 @@
         width: 100%;
     }
     .services__item p{
-        font-size: 12px;
+        font-size: 18px;
+        line-height: 20px;
+        letter-spacing: 1px;
     }
     .services__item h3{
-        font-size: 18px;
+        font-size: 24px;
     }
     .services__item h4{
-        font-size: 14px;
+        font-size: 20px;
     }
     .services .call-button{
         margin-top: 20px;
