--- a/styles/sections/main/services.css
+++ b/styles/sections/main/services.css
@@ -79,6 +79,7 @@
         font-size: 24px;
         margin: 20px 0 15px;
         padding: 0 10px;
+        width: auto;
     }
     .main__services-item{
         width: 33.333%;
@@ -119,5 +120,11 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
+    }
+    .main__services__description h3{
+        font-size: 30px;
+    }
+    .main__services__description p{
+        font-size: 30px;
     }
 }
