--- a/styles/sections.css
+++ b/styles/sections.css
@@ -7,5 +7,6 @@
 @import url(sections/footer.css);
 
 @import url(sections/services/services.css);
+@import url(works.css);
 
 @import url(animation.css);
