--- a/styles/sections/main/about.css
+++ b/styles/sections/main/about.css
@@ -14,7 +14,7 @@
 }
 
 .main__about__description{
-    width: 400px;
+    width: 600px;
     padding-right: 50px;
 }
 
@@ -23,8 +23,11 @@
     font-family: 'Ms Madi', cursive;
     margin: 0 0 20px;
 }
+.main__about__description h2{
+    padding-bottom: 5px;
+}
 
-@media (max-width: 767px) {
+@media (max-width: 769px) {
     .main__about .container{
         padding: 14px;
     }
@@ -65,8 +68,6 @@
         text-align: start;
     }
     .main__about__description p{
-        font-size: 18px;
-        line-height: 20px;
         letter-spacing: 1px;
     }
     .main__about__image{
