--- a/styles/works.css
+++ b/styles/works.css
@@ -17,7 +17,10 @@
 .works__image-wrapper{
     width: calc(33.333% - 4px);
     aspect-ratio: 3/4;
-    margin: 0 2px;
+    margin: 2px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .works__image-wrapper img{
     width: 100%;
@@ -32,7 +35,7 @@
     height: 100vh;
     width: 100vw;
     z-index: 3;
-    background-color: rgba(0, 0, 0, .7);
+    background-color: rgba(0, 0, 0, .9);
     margin: 0;
 }
 .works__image-wrapper.active::after{
@@ -53,9 +56,23 @@
     object-fit: contain;
 }
 
+@media (max-width: 769px) {
+    .works__image-wrapper.active img{
+        width: 100%;
+        height: auto;
+    }
+}
+
 @media (max-width: 565px) {
     .works .container{
         padding: 0;
+    }
+    .works h1{
+        font-size: 24px;
+        padding: 10px 0;
+    }
+    .works__image-wrapper{
+        margin: 2px;
     }
     .works__image-wrapper.active::after{
         content: '\00d7';
