--- a/styles/sections/header.css
+++ b/styles/sections/header.css
@@ -75,8 +75,10 @@ header nav{
         align-items: center;
         justify-content: center;
         position: fixed;
-        height: 100vh;
-        width: 100vw;
+        top: 0;
+        bottom: 0;
+        right: 0;
+        left: 0;
         background-color: white;
         z-index: 10;
     }
